feat: add index.html

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Controle de Encomendas</title>
+<title>Controle de despesas</title>
 </head>
 <body>
 
-<h1>Meu Site de Controle de Encomendas</h1>
+<h1>Meu Site de Controle de Despesas</h1>
 <p>This is a paragraph.</p>
 
 </body>
